--- a/template/package.json
+++ b/template/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "vue": "^2.2.2"{{#router}},
-    "vue-router": "^2.2.0"{{/router}}
+    "vue-router": "^2.2.0",
+    "vue-head": "^2.0.10"{{/router}}
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
