--- a/template/package.json
+++ b/template/package.json
@@ -82,6 +82,8 @@
     "nightwatch": "^0.9.12",
     "selenium-server": "^3.0.1",
     {{/e2e}}
+    "node-sass": "^4.5.1",
+    "sass-loader": "^6.0.3",
     "semver": "^5.3.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
