--- a/template/package.json
+++ b/template/package.json
@@ -92,6 +92,10 @@
     "url-loader": "^0.5.7",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
+    {{#vuex}}
+    "vuex": "^2.0.0",
+    "vuex-router-sync": "^4.1.2",
+    {{/vuex}}
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
