--- a/template/package.json
+++ b/template/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vue": "^2.2.2"{{#router}},
+    "vue": "^2.2.2",
+    "lodash": "^4.17.4"{{#router}},
     "vue-router": "^2.2.0",
     "vue-head": "^2.0.10"{{/router}}
   },
