--- a/template/package.json
+++ b/template/package.json
@@ -97,6 +97,9 @@
     "vuex": "^2.0.0",
     "vuex-router-sync": "^4.1.2",
     {{/vuex}}
+    {{#svg}}
+    "svg-sprite-loader": "0.3.0",
+    {{/svg}}
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
