--- a/template/package.json
+++ b/template/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "{{ description }}",
   "author": "{{ author }}",
+  "url": "{{ url }}",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js"{{#unit}},
+    "dev": "node build/dev-server.js"{{#unit}},
+    "build": "node build/build.js"{{#docs}},
+    "docs": "docute ./docs --watch",{{/docs}}
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"{{/unit}}{{#e2e}},
     "e2e": "node test/e2e/runner.js"{{/e2e}}{{#if_or unit e2e}},
     "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}"{{/if_or}}{{#lint}},
@@ -100,6 +102,9 @@
     {{#svg}}
     "svg-sprite-loader": "0.3.0",
     {{/svg}}
+    {{#docs}}
+    "node-watch": "^0.5.2",
+    {{/docs}}
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
