--- a/template/package.json
+++ b/template/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "node build/dev-server.js"{{#unit}},
     "build": "node build/build.js"{{#docs}},
-    "docs": "docute ./docs --watch",{{/docs}}
+    "docs": "docute ./docs --watch & http-server -p 4000 --cors --silent",{{/docs}}
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run"{{/unit}}{{#e2e}},
     "e2e": "node test/e2e/runner.js"{{/e2e}}{{#if_or unit e2e}},
     "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}"{{/if_or}}{{#lint}},
@@ -104,6 +104,7 @@
     {{/svg}}
     {{#docs}}
     "node-watch": "^0.5.2",
+    "http-server": "^0.9.0",
     {{/docs}}
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
